--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="PPAL App">
+  <meta name="title" property="og:title" content="PPAL">
+  <meta property="og:type" content="Website">
+  <meta name="image" property="og:image" content="https://media.giphy.com/media/KuoQ0kFuK3bZA5ZvhH/giphy.gif">
+  <meta name="description" property="og:description" content="PPAL App">
+  <meta name="author" content="Daniel Sungwon Lee">
   <title>PPAL</title>
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" type="text/css" href="https://sethusenthil.com/Product-Sans/api/font.css">
