--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,8 +6,8 @@
   <meta name="description" content="PPAL App">
   <meta name="title" property="og:title" content="PPAL">
   <meta property="og:type" content="Website">
-  <meta name="image" property="og:image" content="https://media.giphy.com/media/KuoQ0kFuK3bZA5ZvhH/giphy.gif">
-  <meta name="video" property="og:video" content="https://live.staticflickr.com/31337/50936406151_ddf749762b_k.jpg">
+  <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50936637556_a8c0b9c493_k.jpg">
+  <meta property="og:type" content="https://live.staticflickr.com/31337/50936406151_ddf749762b_k.jpg">
   <meta name="description" property="og:description" content="PPAL App">
   <meta name="author" content="Daniel Sungwon Lee">
   <title>PPAL</title>
