--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="PPAL App">
   <meta name="title" property="og:title" content="PPAL">
   <meta property="og:type" content="Website">
-  <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50936637556_a8c0b9c493_k.jpg">
-  <meta name="description" property="og:description" content="PPAL App">
+  <meta name="image" property="og:image" content="https://media.giphy.com/media/Z6dJ5TyXBtNeLRKgr3/giphy.gif">
+  <meta name="description" property="og:description" content="A web application for people who want to search for exercises by category and create a workout routine from their saved (favorites) list of exercises.">
   <meta name="author" content="Daniel Sungwon Lee">
   <title>PPAL</title>
   <link rel="icon" href="/favicon.ico">
