--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" property="og:title" content="PPAL">
   <meta property="og:type" content="Website">
+  <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50938305302_e9bd0dd0d3_k.jpg">
   <meta name="image" property="og:image" content="https://media.giphy.com/media/Z6dJ5TyXBtNeLRKgr3/giphy.gif">
   <meta name="description" property="og:description" content="A web application for people who want to search for exercises by category and create a workout routine from their saved (favorites) list of exercises.">
   <meta name="author" content="Daniel Sungwon Lee">
