meta image edit

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" property="og:title" content="PPAL">
   <meta property="og:type" content="Website">
-  <meta name="image" property="og:image" content="/icons/picon.png">
+  <meta name="image" property="og:image" content="icons/picon.png">
   <meta name="description" property="og:description" content="A web application for people who want to search for exercises by category and create a workout routine from their saved (favorites) list of exercises.">
   <meta name="author" content="Daniel Sungwon Lee">
   <title>PPAL</title>
