changed icon file

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" property="og:title" content="PPAL">
   <meta property="og:type" content="Website">
-  <meta name="image" property="og:image" content="icons/picon.png">
+  <meta name="image" property="og:image" content="icons/ppal.png">
   <meta name="description" property="og:description" content="A web application for people who want to search for exercises by category and create a workout routine from their saved (favorites) list of exercises.">
   <meta name="author" content="Daniel Sungwon Lee">
   <title>PPAL</title>
-  <link rel="icon" href="icons/favicon.ico">
+  <link rel="icon" href="icons/ppal.png">
   <link rel="stylesheet" type="text/css" href="https://sethusenthil.com/Product-Sans/api/font.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
